manifests/gateway/envoy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-envoy
  namespace: envoy-gateway
spec:
  gatewayClassName: envoy
  allowedListeners:
    namespaces:
      from: All
  listeners:
    - name: http
      hostname: dummy
      protocol: HTTP
      port: 1234
