manifests/gateway/grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miniflux
spec:
  parentRefs:
    - kind: ListenerSet
      name: miniflux
      namespace: miniflux
  hostnames:
    - "grafana.wcfm.me"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: k8s-stack-grafana
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
